test/test_units/test_kclvm/test_types/invalid_test_data/schema/schema_19.k
Person = 1
b = Person {
    name: "Alice"
}
